fox gardin + garlic salt + bell peppers

--- a/category.html
+++ b/category.html
@@ -54,7 +54,7 @@ Here we generate all the categories.
         -- <small>{{ post.date | date_to_string }}</small> -- 
       </a>
       {% for tag in post.tags %}
-      / <a class="codinfox-tag-mark" href="/blog/tag/#{{ tag | slugify }}">{{ tag }}</a> 
+      / <a class="codinfox-tag-mark" href="/recipes/tag/#{{ tag | slugify }}">{{ tag }}</a> 
       {% endfor %}
     </h3>
   </li>
@@ -69,7 +69,7 @@ Here we generate all the categories.
   {% unless post.category %}
   <li>
     <h3>
-      <a href="/blog/{{ post.url }}">
+      <a href="/recipes/{{ post.url }}">
         <strong>{{ post.title }}</strong>
         -- <small>{{ post.date | date_to_string }}</small> -- 
       </a>
